--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BucketDrops</string>
     <string name="add_drop">Add a Drop</string>
+    <string name="btn_add_it_font">sans-serif-thin</string>
 </resources>
