--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">BucketDrops</string>
     <string name="add_drop">Add a Drop</string>
     <string name="btn_add_it_font">sans-serif-thin</string>
+    <string name="hint_et_drop">What is it?</string>
+    <string name="add_it">Add it</string>
 </resources>
