--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="btn_add_it_font">sans-serif-thin</string>
     <string name="hint_et_drop">What is it?</string>
     <string name="add_it">Add it</string>
+    <string name="mark_completed">Mark Completed</string>
 </resources>
