--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hint_et_drop">What is it?</string>
     <string name="add_it">Add it</string>
     <string name="mark_completed">Mark Completed</string>
+    <string name="no_items_to_display">No items to display</string>
 </resources>
