--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">BucketDrops</string>
     <string name="add_drop">Add a Drop</string>
     <string name="btn_add_it_font">sans-serif-thin</string>
+    <string name="sans_serif_thin">sans-serif-thin</string>
     <string name="hint_et_drop">What is it?</string>
     <string name="add_it">Add it</string>
     <string name="mark_completed">Mark Completed</string>
