--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="add_it">Add it</string>
     <string name="mark_completed">Mark Completed</string>
     <string name="no_items_to_display">No items to display</string>
+    <string name="push_message">You are about to accomplish your goal</string>
+    <string name="push_message_large">Congrats! You are about to complete your goal</string>
+    <string name="push_title">Achievement</string>
 </resources>
